2010-11-19  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Automake::Config: remove extra trailing semicolon.
	* lib/Automake/Config.in: Remove extra trailing semicolon.

	help4.test: fix botched heading comment.
	* tests/help4.test: Fixed the heading comment, since it
	didn't correctly describe what checks the testcase was
	supposed to perform.

	help2.test: add checks on aclocal too.
	* tests/help2.test: Check that also `aclocal --version' and
	`aclocal --help' work with configure.in and acinclude.m4 both
	broken.

2010-11-19  Stefano Lattarini  <stefano.lattarini@gmail.com>

	New test on repeated automake options.
	* tests/repeated-options.test: New test, check that automake
	does not complain on repeated options, nor generate broken or
	incorrect makefiles.
	* tests/Makefile.am (TESTS): Updated.

2010-11-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix spurious failures of silent-rules tests with Sun Fortran.
	* tests/silentf77.test: Strip from the make output some verbose
	messages possibly printed by the SunStudio fortran compilers, to
	avoid spurious failures.  Add a trailing `:' command.
	* tests/silentf90.test: Likewise.

2010-11-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix spurious failures of silent5.test with Sun Fortran.
	* tests/silent5.test: Strip from the make output some verbose
	messages possibly printed by the SunStudio fortran compilers,
	to avoid spurious failures.  This bug has been there from the
	very first version of this test script.

2010-11-16  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix regression in colon{5,6}.test (failures on AIX 5.3).
	* tests/colon5.test: Also substitute `@SHELL@' with `$SHELL' when
	post-processing the generated Makefile.in, to work around a bug
	of AIX 5.3 make which doesn't allow setting the `$(SHELL)' macro
	on the commend line.  Calls to `$MAKE' adjusted accordingly.
	* tests/colon6.test: Likewise.
	Regression introduced in commit v1.11-175-gf9fe878 "Modernize,