@@ -332,7 +332,7 @@ my @config_links = ();
 
 # Directory where output files go.  Actually, output files are
 # relative to this directory.
-my $output_directory;
+my $output_directory = '.';
 
 # List of Makefile.am's to process, and their corresponding outputs.
 my @input_files = ();
@@ -8469,7 +8469,6 @@ sub parse_arguments ()
 						    $cli_where); },
      'no-force'	=> sub { $force_generation = 0; },
      'f|force-missing'  => \$force_missing,
-     'o|output-dir=s'	=> \$output_directory,
      'a|add-missing'	=> \$add_missing,
      'c|copy'		=> \$copy_missing,
      'v|verbose'	=> sub { setup_channel 'verb', silent => 0; },
@@ -8505,16 +8504,6 @@ sub parse_arguments ()
   # that ambiguous abbreviation are diagnosed.
   Getopt::Long::GetOptions %cli_options, 'version' => sub {}, 'help' => sub {}
     or exit 1;
-
-  if (defined $output_directory)
-    {
-      msg 'obsolete', "`--output-dir' is deprecated";
-    }
-  else
-    {
-      # In the next release we'll remove this entirely.
-      $output_directory = '.';
-    }
 
   return unless @ARGV;
 
