@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 1996, 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 2010 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -14,19 +14,16 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-# Test to ensure that --output-dir works.  Bug report from Joshua
-# Cowan.
+# Check that the `-o' aka `--output-dir' option is not recognized anymore.
 
 . ./defs || Exit 1
 
-cat > Makefile.am <<'END'
-pkgdata_DATA =
-END
+set -e
 
-mkdir zardir
+AUTOMAKE_fails -Wno-error --output-dir=foo
+$EGREP '(invalid|unrecognized) option.*--output-dir' stderr
 
-$ACLOCAL || Exit 1
-$AUTOMAKE -Wno-obsolete --output-dir=zardir || Exit 1
+AUTOMAKE_fails -Wno-error -o foo
+$EGREP '(invalid|unrecognized) option.*-o' stderr
 
-test -f Makefile.in && Exit 1
-test -f zardir/Makefile.in
+:
