@@ -3,6 +3,7 @@ New in 1.11a:
 * Changes to automake:
 
   - automake now generates silenced rules for texinfo outputs.
+  - The deprecated option `--output-dir' has been removed.
 
 * New targets:
 
