@@ -1,3 +1,15 @@
+2010-11-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Remove obsolete automake option `--output-directory'.
+	This option has been deprecated since version 1.7 (2002/2003).
+	* automake.in ($output_directory): Define to `.' unconditionally.
+	(parse_arguments): Remove handling of equivalent options `-o' and
+	`--output-directory'.
+	* tests/outdir.test: Removed.
+	* tests/no-outdir-option.test: New test.
+	* tests/Makefile.am (TESTS): Updated.
+	* NEWS: Updated.
+
 2010-11-19  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	Automake::Config: remove extra trailing semicolon.
